# labs

./: 23.1  23ko1.c  23ko2.c  23ko3.c  23ko4.c  23ko5.c  23ko6.c  23ko7.c  23ko8.c  23ko9.c  24ko1.c  24ko2.c  24ko3.c  CMakeLists.txt  PROBLEM5.C  PROJECT2.C  PROJECT3.C  PROJECT4.C  h.c  main.c  practice1.c  practice10.c  practice13.c  practice14.c  practice15.c  practice16.c  practice17.c  practice18.c  practice19.c  practice2.c  practice20.c  practice4.c  practice5.c  practice6.c  practice7.c  practice8.c  practice9.c  pratice3.c  problem16.c  problem6.C  (+26 more)
