cmake_minimum_required(VERSION 4.1)
project(untitled C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled main.c
        PROBLEM5.C
        project1.c
        problem6.C
        problem7.c
        program8.c
        program9.c
        program10.c
        program11.c
        program12.c
        program13.c
        program14.c
        problem16.c
        lab2/practice1.c
        lab2/practice2.c
        lab2/pratice3.c
        lab2/practice4.c
        lab2/practice5.c
        lab2/practice6.c
        lab2/practice7.c
        h.c
        lab2/practice8.c
        lab2/practice9.c
        lab2/practice10.c
        lab2/program11.c
        lab2/program12.c
        lab2/practice13.c
        lab2/practice14.c
        lab2/practice15.c
        lab2/practice16.c
        lab2/practice17.c
        lab2/practice18.c
        lab2/practice19.c
        lab2/practice20.c
        lab3/program1.c
        lab3/program2.c
        lab3/program3.c
        lab3/program4.c
        lab3/program5.c
        lab3/program6.c
        lab3/program7.c
        lab3/program8.c
        lab3/program9.c
        lab3/program10.c
        lab3/program11.c
        lab3/program12.c
        lab3/program13.c
        lab3/program14.c
        lab3/program15.c
        lab3/program16.c
        lab3/program17.c
        lab3/program18.c
        lab3/program19.c
        lab3/program20.c
        lab3/program21.c
        lab3/program22.c
        lab3/program23.c
        lab3/23ko1.c
        lab3/23ko2.c
        lab3/23ko3.c
        lab3/23ko4.c
        lab3/23ko5.c
        lab3/23ko6.c
        lab3/23ko7.c
        lab3/23ko8.c
        lab3/23ko9.c
        lab3/program24.c
        lab3/24ko1.c
        lab3/24ko2.c
        lab3/24ko3.c)
